# peepeepoopoo

./: .gitignore  blueprint.md  gpt-4o-docs.md  idea.md
backend/: README.md  pyproject.toml
backend/app/: client.py  main.py
